fix: crowding and z-index of widget

--- a/src/features/components/templates/navigation/template/nav.template.module.scss
+++ b/src/features/components/templates/navigation/template/nav.template.module.scss
@@ -2,7 +2,7 @@
 
 .header_wrapper {
     position: fixed;
-    z-index: 4;
+    z-index: 2002;
     inset-block-start: 0;
 }
 
